src/test/contracts/top_level_patterns/negative/jsligo/nested_tuple.jsligo
const r = [[1 as nat, 1, "H"], [2 as nat, 2, "E"], [3 as nat, 3, "Hello"]]
const [[a1, a2, a3], [b1, a2, b3], [c1, c2, c3]] = r